Submitting HTML and CSS Intro Exercise - Late

--- a/module-3/01_Intro_HTML_CSS/exercise/index.html
+++ b/module-3/01_Intro_HTML_CSS/exercise/index.html
@@ -1,11 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Finance Fan Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    
+    <header>
+        <h1>A Tribute to the Study of Finance</h1>
+        <img id="financeImage" src="https://www.investopedia.com/thmb/-LQspA_t-a16bqf2LZPq2CqURRk=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/TermDefinitions_Finance_finalv1-3f19293c9e414e5cbcb7d6fab1aaf1ff.png" alt="Image of a figure printing money and another figure analyzing data on a computer, with the text 'Finance: The study of creating, circulating, and managing money.' ">
+    </header>
+
+    <main>
+        <section id="facts-section">
+            <h2>
+                <u>Facts Section</u>
+            </h2>
+            <h3>
+                The Facts Section displays several key facts about the study of finance.
+             </h3>
+
+            <table border=1px>
+                <tbody>
+                    <tr>
+                        <th>Components of an Entity's Resources</th>
+                        <th>Key Principles of Financial Analysis</th>
+                        <th>Investment Strategy Categories</th>
+                        <th>Main Subdisciplines</th>
+                        <th>Types of Financial Instruments</th>
+                    </tr>
+                    <tr>
+                        <td>Assets</td>
+                        <td>Cash Flow</td>
+                        <td>Active</td>
+                        <td>Corporate Finance</td>
+                        <td>Stocks</td>
+                    </tr>
+                    <tr>
+                        <td>Liabilities</td>
+                        <td>Time Value of Money</td>
+                        <td>Passive</td>
+                        <td>Investment Management</td>
+                        <td>Bonds</td>
+                    </tr>
+                    <tr>
+                        <td>Contributed Capital</td>
+                        <td>Risk and Return</td>
+                        <td>Growth</td>
+                        <td>Financial Management</td>
+                        <td>Cash and cash equivalents</td>
+                    </tr>
+                    <tr>
+                        <td>Retained Earnings</td>
+                        <td>Debt management</td>
+                        <td>Value</td>
+                        <td>Risk Management</td>
+                        <td>Derivative instruments</td>
+                    </tr>
+                </tbody>
+
+            </table>
+        </section>
+
+        <section id="quotes-section">
+            <h2>
+                <u>Quotes Section</u>
+            </h2>
+            <h3>
+                The Quotes Section shares some intriguing and interesting quotes about the subject of finance.
+            </h3>
+            <h4>
+                "Finance is fun" - Sam
+            </h4>
+            <h4>
+                "Finance is great" - Sam
+            </h4>
+        </section>
+
+        <section id="links-section">
+            <h2>
+                <u>Links Section</u>
+            </h2>
+            <h3>
+                The Links Section shares links that have more info on this subject.
+            </h3>
+            <ul><a href="https://www.investopedia.com/">Investopedia</a></ul>
+            <ul><a href="https://finance.yahoo.com/">Yahoo Finance</a></ul>
+            <ul><a href="https://www.nyse.com/index">New York Stock Exchange</a></ul>
+        </section>
+
+    </main>
+
+    <footer>
+        No copyright 2022
+    </footer>
 </body>
 </html>
