--- a/module-3/01_Intro_HTML_CSS/exercise/info.html
+++ b/module-3/01_Intro_HTML_CSS/exercise/info.html
@@ -4,8 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Info Form Page</title>
+    <link rel="stylesheet" href="info-styles.css">
 </head>
 <body>
+
+    <form action="" method="POST">
+
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" />
+        <div>&nbsp;</div>
     
+        <label for="email">Email Address:</label>
+        <input type="email" id="email" name="email" />
+        <div>&nbsp;</div>
+    
+        <label for="date-of-birth">Date of Birth:</label>
+        <input type="date" id="date-of-birth" name="date-of-birth" />
+        <div>&nbsp;</div>
+
+        <label for="favorite-color">Favorite Color:</label>
+        <input type="text" id="favorite-color" name="favorite-color" />
+        <div>&nbsp;</div>
+
+        <label for="lucky-number">Lucky Number:</label>
+        <input type="number" id="lucky-number" name="lucky-number" />
+        <div>&nbsp;</div>
+
+        <label for=confirmation>Confirmation:</label>
+        <input type="checkbox" id = "confirmation" name="confirmation" />
+
+        <label for=submit></label>
+        <input type="submit" id="submit" name="submit">    
+        </form>       
+
 </body>
 </html>
