Submission 2 for 01 Intro HTML and CSS

--- a/module-3/01_Intro_HTML_CSS/exercise/index.html
+++ b/module-3/01_Intro_HTML_CSS/exercise/index.html
@@ -12,17 +12,13 @@
 <body>
     <header>
         <h1>A Tribute to the Study of Finance</h1>
-        <img id="financeImage" src="https://www.investopedia.com/thmb/-LQspA_t-a16bqf2LZPq2CqURRk=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/TermDefinitions_Finance_finalv1-3f19293c9e414e5cbcb7d6fab1aaf1ff.png" alt="Image of a figure printing money and another figure analyzing data on a computer, with the text 'Finance: The study of creating, circulating, and managing money.' ">
+        <img id="financeImage" src="financeImage.png" alt="Image of a figure printing money and another figure analyzing data on a computer, with the text 'Finance: The study of creating, circulating, and managing money.' ">
     </header>
 
     <main>
         <section id="facts-section">
-            <h2>
-                <u>Facts Section</u>
-            </h2>
-            <h3>
-                The Facts Section displays several key facts about the study of finance.
-             </h3>
+            <h2>Facts Section</h2>
+            <h3>The Facts Section displays several key facts about the study of finance.</h3>
 
             <table border=1px>
                 <tbody>
@@ -67,30 +63,22 @@
         </section>
 
         <section id="quotes-section">
-            <h2>
-                <u>Quotes Section</u>
-            </h2>
-            <h3>
-                The Quotes Section shares some intriguing and interesting quotes about the subject of finance.
-            </h3>
-            <h4>
-                "Finance is fun" - Sam
-            </h4>
-            <h4>
-                "Finance is great" - Sam
-            </h4>
+            <h2>Quotes Section</h2>
+            <h3>The Quotes Section shares some intriguing and interesting quotes about the subject of finance.</h3>
+            <div>
+                <ul>"Finance is fun" - Sam</ul>
+                <ul>"Finance is great" - Sam</ul>
+            </div>
         </section>
 
         <section id="links-section">
-            <h2>
-                <u>Links Section</u>
-            </h2>
-            <h3>
-                The Links Section shares links that have more info on this subject.
-            </h3>
-            <ul><a href="https://www.investopedia.com/">Investopedia</a></ul>
-            <ul><a href="https://finance.yahoo.com/">Yahoo Finance</a></ul>
-            <ul><a href="https://www.nyse.com/index">New York Stock Exchange</a></ul>
+            <h2>Links Section</h2>
+            <h3>The Links Section shares links that have more info on this subject.</h3>
+            <div>
+                <ul><a href="https://www.investopedia.com/">Investopedia</a></ul>
+                <ul><a href="https://finance.yahoo.com/">Yahoo Finance</a></ul>
+                <ul><a href="https://www.nyse.com/index">New York Stock Exchange</a></ul>
+            </div>
         </section>
 
     </main>
