Submission try 3 01 Intro

--- a/module-3/01_Intro_HTML_CSS/exercise/index.html
+++ b/module-3/01_Intro_HTML_CSS/exercise/index.html
@@ -12,7 +12,9 @@
 <body>
     <header>
         <h1>A Tribute to the Study of Finance</h1>
-        <img id="financeImage" src="financeImage.png" alt="Image of a figure printing money and another figure analyzing data on a computer, with the text 'Finance: The study of creating, circulating, and managing money.' ">
+        <div>
+            <img id="financeImage" src="financeImage.png" alt="Image of a figure printing money and another figure analyzing data on a computer, with the text 'Finance: The study of creating, circulating, and managing money.' ">
+        </div>
     </header>
 
     <main>
@@ -66,8 +68,8 @@
             <h2>Quotes Section</h2>
             <h3>The Quotes Section shares some intriguing and interesting quotes about the subject of finance.</h3>
             <div>
-                <ul>"Finance is fun" - Sam</ul>
-                <ul>"Finance is great" - Sam</ul>
+                <ol>"Finance is fun" - Sam</ol>
+                <ol>"Finance is great" - Sam</ol>
             </div>
         </section>
 
