--- a/module-3/01_Intro_HTML_CSS/exercise/index.html
+++ b/module-3/01_Intro_HTML_CSS/exercise/index.html
@@ -68,8 +68,8 @@
             <h2>Quotes Section</h2>
             <h3>The Quotes Section shares some intriguing and interesting quotes about the subject of finance.</h3>
             <div>
-                <ol>"Finance is fun" - Sam</ol>
-                <ol>"Finance is great" - Sam</ol>
+                <blockquote>"Finance is fun" - Sam</blockquote>
+                <blockquote>"Finance is great" - Sam</blockquote>
             </div>
         </section>
 
