--- a/module-3/01_Intro_HTML_CSS/exercise/index.html
+++ b/module-3/01_Intro_HTML_CSS/exercise/index.html
@@ -18,7 +18,7 @@
         <div>
             <img id="financeImage" src="financeImage.png" alt="Image of a figure printing money and another figure analyzing data on a computer, with the text 'Finance: The study of creating, circulating, and managing money.' ">
         </div>
-        
+
         <section id="facts-section">
             <h2>Facts Section</h2>
             <h3>The Facts Section displays several key facts about the study of finance.</h3>
@@ -78,9 +78,12 @@
             <h2>Links Section</h2>
             <h3>The Links Section shares links that have more info on this subject.</h3>
             <div>
-                <ul><a href="https://www.investopedia.com/">Investopedia</a></ul>
-                <ul><a href="https://finance.yahoo.com/">Yahoo Finance</a></ul>
-                <ul><a href="https://www.nyse.com/index">New York Stock Exchange</a></ul>
+                <ul>
+                    <li><a href="https://www.investopedia.com/">Investopedia</a></li>
+                    <li><a href="https://finance.yahoo.com/">Yahoo Finance</a></li>
+                    <li><a href="https://www.nyse.com/index">New York Stock Exchange</a></li>
+                </ul>
+
             </div>
         </section>
 
