--- a/module-3/01_Intro_HTML_CSS/exercise/info.html
+++ b/module-3/01_Intro_HTML_CSS/exercise/info.html
@@ -11,21 +11,21 @@
 
     <form action="" method="POST">
 
-        <label for="name">Name:</label>
+        <label for="name">Name</label>
         <input type="text" id="name" name="name" />
-        <div>&nbsp;</div>
+
     
-        <label for="email">Email Address:</label>
+        <label for="email">Email Address</label>
         <input type="email" id="email" name="email" />
-        <div>&nbsp;</div>
+
     
         <label for="date-of-birth">Date of Birth:</label>
         <input type="date" id="date-of-birth" name="date-of-birth" />
         <div>&nbsp;</div>
 
-        <label for="favorite-color">Favorite Color:</label>
+        <label for="favorite-color">Favorite Color</label>
         <input type="text" id="favorite-color" name="favorite-color" />
-        <div>&nbsp;</div>
+
 
         <label for="lucky-number">Lucky Number:</label>
         <input type="number" id="lucky-number" name="lucky-number" />
