--- a/module-3/01_Intro_HTML_CSS/exercise/info.html
+++ b/module-3/01_Intro_HTML_CSS/exercise/info.html
@@ -11,21 +11,21 @@
 
     <form action="" method="POST">
 
-        <label for="name">Name</label>
-        <input type="text" id="name" name="name" />
-
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required /><br>
+        <div>&nbsp;</div>
     
-        <label for="email">Email Address</label>
-        <input type="email" id="email" name="email" />
-
+        <label for="email">Email Address:</label>
+        <input type="email" id="email" name="email" required /><br>
+        <div>&nbsp;</div>
     
         <label for="date-of-birth">Date of Birth:</label>
         <input type="date" id="date-of-birth" name="date-of-birth" />
         <div>&nbsp;</div>
 
-        <label for="favorite-color">Favorite Color</label>
-        <input type="text" id="favorite-color" name="favorite-color" />
-
+        <label for="favorite-color">Favorite Color:</label>
+        <input type="text" id="favorite-color" name="favorite-color" required /><br>
+        <div>&nbsp;</div>
 
         <label for="lucky-number">Lucky Number:</label>
         <input type="number" id="lucky-number" name="lucky-number" />
@@ -33,6 +33,7 @@
 
         <label for=confirmation>Confirmation:</label>
         <input type="checkbox" id = "confirmation" name="confirmation" />
+        <div>&nbsp;</div>
 
         <label for=submit></label>
         <input type="submit" id="submit" name="submit">    
