Try 8 01 Intro HTML CSS

--- a/module-3/01_Intro_HTML_CSS/exercise/info.html
+++ b/module-3/01_Intro_HTML_CSS/exercise/info.html
@@ -24,7 +24,7 @@
         <div>&nbsp;</div>
 
         <label for="favorite-color">Favorite Color:</label>
-        <input type="text" id="favorite-color" name="favorite-color" required /><br>
+        <input type="color" id="favorite-color" name="favorite-color" required /><br>
         <div>&nbsp;</div>
 
         <label for="lucky-number">Lucky Number:</label>
