Submitting late hw 02

--- a/module-3/06_Intro_to_JavaScript/lecture/index.html
+++ b/module-3/06_Intro_to_JavaScript/lecture/index.html
@@ -14,4 +14,9 @@
     <h1>Use your console along with the javascript file to call the code.</h1>
 
 </body>
+
+    <script>
+        variables();
+        doingMath();
+    </script>
 </html>
